--- a/src/components/Home/UserForm/UserForm.css
+++ b/src/components/Home/UserForm/UserForm.css
@@ -1,8 +1,7 @@
-
 .form {
-    width: 50%;
-    margin:auto !important;
-}   
-.user-data span{
-    color: red;
+  width: 50%;
+  margin: auto !important;
+}
+.user-data span {
+  color: tomato;
 }
